[fixed] fix text overflow in input-field

--- a/src/Form.less
+++ b/src/Form.less
@@ -296,6 +296,7 @@
   .@{__formPrefixCls}-input {
     display: table;
     width: 100%;
+    word-break: break-all;
   }
 }
 
